# nix-eval-graph

./: .gitignore  Cargo.toml  flake.nix  overlay.nix  query-attr-paths.sh  query-derivations.sh
devShells/: rust-devShell.nix
nixosModules/: networking.nix  nix.nix  virtualisation.nix
overlays/: default.nix  rust-packages.nix
rust-packages/produce-attr-paths/: Cargo.toml  README.md  package.nix
rust-packages/produce-attr-paths/src/: lib.rs  main.rs  nix_eval_stats.rs  nix_search.rs
rust-packages/produce-derivations/: Cargo.toml  LICENSE  README.md  package.nix
rust-packages/produce-derivations/src/: lib.rs  main.rs  nix_derivation_show.rs
tests/: integration-test.nix  produce-attr-paths-cudaPackages_12.nix  produce-derivations-hello.nix
tests/integration-test/: package.nix
tests/integration-test/machines/: client.nix  produce-attr-paths.nix  router.nix
tests/machines/: client.nix  produce-attr-paths.nix  produce-derivations.nix
